commande client avec factures ok
